Changes in pom file. Java version changed